# Intaby

./: .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yaml  manage.py  nginx.conf  sonar-project.properties
.github/workflows/: build.yml  linter.yml
rust-server/: Cargo.toml  Dockerfile  README.md  recipe.json
rust-server/src/: game.rs  main.rs
rust-server/src/database/: mod.rs  psql.rs  sql.rs
rust-server/src/model/: mod.rs  tests.rs
rust-server/src/server/: error.rs  games.rs  mod.rs  python_server.rs
rust-server/src/tests/: end_to_end.rs  mock.rs  mod.rs
rust-server/src/web_client/: mock.rs  mod.rs  reqwest_client.rs
web-app/: Dockerfile  app_start.py  asgi.py  config.py  main.py  requirements.txt  settings.py  test.py  test_main.py  urls.py  wsgi.py
web-app/adapters/: __init__.py  orm.py  repository.py
web-app/api/resource/: QuizResource.py  UserResource.py
web-app/domain/: __init__.py  model.py
web-app/entrypoints/: flask_app.py
web-app/entrypoints/api/: __init__.py  api_initialization.py
web-app/service_layer/: services.py
web-app/static/: authorization_page.html  leaderboard.html  main_page.html  page_of_answer.html  page_of_create.html  page_of_user.html  registration_page.html  waiting_hall.html  wh_teacher.html
web-app/static/scripts/: addAnswer.js  addAnswer_answerPage.js  addLeaderboardUser.js  addParticipant.js  addQuiz.js  ajax.js  answerPage.js  authorization_script.js  create_quiz.js  package-lock.json  package.json  page_answer.js  page_of_user_script.js  script.js  (+4 more)
web-app/tests/: test_api.py  test_orm.py
(+17 files in other folders)
