[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.2", features = ["json"] }
async-trait = "0.1.56"
reqwest = "0.11.11"

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "offline", "any", "postgres", "mysql", "sqlite", "mssql"]
